# Othello-Game-main

./: .gitpod.yml  README.md  emurgo-project.cabal  logo.txt
app/: Main.hs
src/: Actions.hs  Lib.hs  Lib3.hs  Types.hs
